2008-04-11  Chong Yidong  <cyd@stupidchicken.com>

	* woman.el (woman2-TH): Use string-equal instead of string-match.

2008-04-11  Kevin Ryde  <user42@zip.com.au>

	* emacs-lisp/autoload.el (autoload-generate-file-autoloads):
	Bind print-level to ensure output forms aren't truncated if
	print-level is set to eval-expression-print-level when going via
	eval-defun and friends, or has been otherwise fiddled with.

2008-04-09  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-find-file-name-coding-system-alist):
	New defun.
	(tramp-handle-insert-file-contents, tramp-handle-write-region):
	Use it.

	* net/trampver.el: Update release number.

2008-04-09  Alan Mackenzie  <acm@muc.de>

	* font-lock.el (font-lock-extend-after-change-region-function):
	Make it buffer local.

2008-04-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/cc-mode.el (c-basic-common-init): Don't set
	font-lock-extend-after-change-region-function globally.

2008-04-08  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org-export-latex.el: New file.

	* textmodes/org-irc.el: New file.

	* textmodes/org-mac-message.el: New file.

	* textmodes/org-publish.el: New file.

	* textmodes/org.el (org-agenda-collect-markers)
	(org-create-marker-find-array)
	(org-check-agenda-marker-table, org-extract-log-state-settings)
	(org-nofm-to-completion, org-refile-goto-last-stored)
	(org-export-html-convert-special-strings, org-first-list-item-p)
	(org-imenu-new-marker, org-imenu-get-tree)
	(org-speedbar-set-agenda-restriction)
	(org-agenda-set-restriction-lock)
	(org-agenda-remove-restriction-lock)
	(org-agenda-maybe-redo, org-compute-latex-and-specials-regexp)
	(org-do-latex-and-special-faces, org-read-date-display)
	(org-select-remember-template, org-agenda-copy-local-variable)
	(org-read-date-get-relative, org-columns-cleanup-item)
	(org-find-entry-with-id)
	(org-insert-columns-dblock, org-listtable-to-string)
	(org-dblock-write:columnview, org-columns-capture-view)