@@ -1,3 +1,7 @@
+2008-04-11  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* progmodes/python.el (python-mode): Don't mess with hippie-expand.
+
 2008-04-11  Chong Yidong  <cyd@stupidchicken.com>
 
 	* woman.el (woman2-TH): Use string-equal instead of string-match.
